frontend/test/should_pass/pattern_005.grg
pattern Foo
{
	x: Node;
}

pattern Bar
{
	x: Node;
	
	replace
	{
	}
}

rule r
{
	foo:Foo();

	replace
	{
		bar:Bar();
	}
}