frontend/test/should_fail/rhs_003.grg
rule r {
	replace(x:Node) {}
}